[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/HintergrundWand.png" type="Texture" id=2]
[ext_resource path="res://Assets/Herz.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 0.5
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 241.123, 181.115 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 124.939, 115.745 )

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 508.905, 299 )
scale = Vector2( 1.03141, 1.03667 )
frames = SubResource( 1 )
animation = "default"

[node name="Area2D" type="Area2D" parent="." index="1"]

position = Vector2( -4, -4 )
scale = Vector2( 1.125, 1.125 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D_mud" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 376.062, 158.311 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D2" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D_rainbow" type="CollisionShape2D" parent="Area2D2" index="0"]

position = Vector2( 429.07, 174.702 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Area2D2" index="1"]

position = Vector2( 526, 294.141 )
scale = Vector2( 0.480469, 0.480469 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Offset" ]

[node name="UnicornSpawn" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="BigUnicornSpawn" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="SpawnCountdown" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="Level2Cooldown" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Player" parent="." index="7" instance=ExtResource( 4 )]

position = Vector2( 766.469, 298.067 )

[node name="HUD" parent="." index="8" instance=ExtResource( 5 )]

[connection signal="timeout" from="UnicornSpawn" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="BigUnicornSpawn" to="." method="_on_Timer2_timeout"]

[connection signal="timeout" from="SpawnCountdown" to="." method="_on_Timer3_timeout"]

[connection signal="timeout" from="Level2Cooldown" to="." method="_on_Level2Cooldown_timeout"]


